[project]
name = "ass-teroids"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame==2.6.1",
    "pylint>=4.0.4",
]

[tool.pylint.main]
init-hook = 'import sys; sys.path.append(".venv/lib/python3.13/site-packages")'
